@@ -15,6 +15,8 @@ release.
 - Files that don't exist on disk are no longer saved in the perspective
   (Ollie Rutherfurd).
 
+- The end of a fold is now indicated in the gutter.
+
 }}}
 {{{ Bug Fixes
 
@@ -46,6 +48,16 @@ release.
 
 - Setting indentOpenBrackets and indentCloseBrackets to ( and ) didn't
   work, this broke Lisp auto indent.
+
+- When text editing moves the caret out of the visible region, jEdit
+  only scrolls the text area if its active, so that editing with a split
+  view does not scroll the inactive text area's caret into the visible
+  region. However the logic for handling this case in jEdit 4.2 was
+  flawed and even selecting a command from a menu would not cause
+  scrolling.
+
+- "Searching..." message in HyperSearch window did not go away if the
+  file set contained no files.
 
 }}}
 
